--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,19 @@
 Package: multilinear
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: A Package for Multiple Linear Regression
+Version: 1.0.0
 Authors@R: 
     person(given = "Haihan",
            family = "Zhang",
            role = c("aut", "cre"),
            email = "hhzhang@umich.edu",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           comment = c(ORCID = "0000-0002-5902-7289"))
+Description: This package is a practice for the coursework Biostat 625 at University of Michigan - Ann Arbor, which provides comparible analytical results to R built-in functions for multiple linear regression.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
